# flutter_faust_example

./: .gitignore  README.md  pubspec.yaml
DSP/: README.md  main.dsp
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: DspFaust.cpp
android/app/src/main/java/com/example/flutter_faust/flutter_faust_example/: MainActivity.java
ios/Runner/: AppDelegate.mm  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/DSP/: DspFaust.cpp  README.md
lib/: dsp_api.dart  main.dart
